<?xml version="1.0"?>
<package format="3">
  <name>plansys2_washroom_pkg</name>
  <version>0.0.0</version>
  <description>Washroom cleaning demo: fake Nav2 server + PlanSys2 bridge.</description>
  <maintainer email="manas@todo.todo">manas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python-yaml</depend>
  <depend>popf</depend>
  <exec_depend>ros2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

