[develop]
script_dir=$base/lib/plansys2_washroom_pkg

[install]
install_scripts=$base/lib/plansys2_washroom_pkg

[metadata]
name = plansys2_washroom_pkg
version = 0.0.0
description = Plansys2 washroom demo package (executor bridge + fake Nav2 servers)

[options]
packages = find:

[options.entry_points]
# console scripts defined in setup.py
